Prevent tables from overflowing text boxes

--- a/src/style/table.css
+++ b/src/style/table.css
@@ -29,3 +29,10 @@
   border-right: 3px solid #a5bcd3;
   border-bottom: 1px solid rgb(239, 240, 242);
 }
+
+.c-bodybox .c-table__wrapper,
+.c-factbox .c-table__wrapper {
+  max-width: 100% !important;
+  right: unset !important;
+  left: unset !important;
+}
